last commit b4 remove sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <header>
-            <div class="title-bar">
+            <div class="title-bar glass">
                 <div class="title-content">
                     <div class="title-name">
                         <h1 class="title-name">Boris Metodiev</h1>
@@ -19,9 +19,9 @@
                         <button id="btn2" class="hover-underline-animation center">Button 2</button>
                         <button id="btn3" class="hover-underline-animation right">Button 3</button>
                     </div>
-                    <div class="codedBy">
+                    <!-- <div class="codedBy">
                         <h1 class="codedBy">Coded by Boris</h1>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="header-container">
@@ -49,36 +49,26 @@
 
     <div class="sidebar glass">
         <ul>
-            <li>
-              <span class="icon">
-                <img src="https://via.placeholder.com/32" alt="icon" />
-              </span>
-              <span class="title">Test 1</span>
-            </li>
-            <li>
-              <span class="icon">
-                <img src="https://via.placeholder.com/32" alt="icon" />
-              </span>
-              <span class="title">Test 2</span>
-            </li>
-            <li>
-              <span class="icon">
-                <img src="https://via.placeholder.com/32" alt="icon" />
-              </span>
-              <span class="title">Test 3</span>
-            </li>
-            <li>
-              <span class="icon">
-                <img src="https://via.placeholder.com/32" alt="icon" />
-              </span>
-              <span class="title">Test 4</span>
-            </li>
-            <li>
-              <span class="icon">
-                <img src="https://via.placeholder.com/32" alt="icon" />
-              </span>
-              <span class="title">Test 5</span>
-            </li>
+                    <li>
+            <span class="icon">🏠</span>
+            <span class="title">Home</span>
+        </li>
+        <li>
+            <span class="icon">👤</span>
+            <span class="title">About</span>
+        </li>
+        <li>
+            <span class="icon">💼</span>
+            <span class="title">Projects</span>
+        </li>
+        <li>
+            <span class="icon">📧</span>
+            <span class="title">Contact</span>
+        </li>
+        <li>
+            <span class="icon">⚙️</span>
+            <span class="title">Settings</span>
+        </li>
           </ul>
     </div>
 
