--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="script.js" defer></script>
+
 </head>
 <body>
     <div class="main" id="cursor">
@@ -46,7 +51,7 @@
     <!-- Skills Section -->
     <section id="skills" class="skills-section">
         <div class="skills-container">
-            <h2 class="skills-title">My Skills</h2>
+            <h1 class="skills-title">My Skills</h1>
             <div class="skills-categories" id="skillsCategories">
                 <!-- Skills categories will be dynamically generated here by script.js -->
             </div>
